<resources>
    <string name="app_name">ArithmaGo</string>
    <string name="logo">Logo</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="rules">Rules</string>
    <string name="play">Play</string>
    <string name="_2">2</string>
    <string name="dallas_marshall">Dallas Marshall</string>
    <string name="_10_526">10,526</string>
    <string name="avatar">avatar</string>
    <string name="first">1st</string>
    <string name="share">Share</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="division">Division</string>
    <string name="multiplication">Multiplication</string>
    <string name="operators">Operators</string>
    <string name="level">level</string>
    <string name="default_username">Default Username</string>
    <string name="username">username</string>
    <string name="save">Save</string>
    <string name="normal">Normal</string>
    <string name="answershield">answerShield</string>
    <string name="_125">125</string>
    <string name="_15x12">15 x 12</string>
    <string name="_34">34</string>
    <string name="_10_105_245">10,105,245</string>
    <string name="_3x">3x</string>
    <string name="medium">Medium</string>
    <string name="_0">0</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="score">Score:</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="podium">Podium</string>
    <string-array name="levels">
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Lightning</item>
        <item>God level</item>
    </string-array>
</resources>