<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:textColor="@color/prussian_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operators"
        android:textSize="24sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/multiplicationCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="-5dp"
            android:text="@string/multiplication" />

        <CheckBox
            android:id="@+id/divisionCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="-5dp"
            android:text="@string/division" />

        <CheckBox
            android:id="@+id/additionCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="-5dp"
            android:text="@string/addition" />

        <CheckBox
            android:id="@+id/subtractionCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="-5dp"
            android:text="@string/subtraction" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:textColor="@color/prussian_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textSize="24sp" />

    <Spinner
        android:background="@drawable/outline"
        android:id="@+id/levelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:padding="5dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:textColor="@color/prussian_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/usernameEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/outline"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textSize="20sp" />
</androidx.appcompat.widget.LinearLayoutCompat>