<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playSelected"
            android:text="@string/play"
            android:textSize="18sp" />

        <Button
            android:id="@+id/leaderboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="leaderboardSelected"
            android:text="@string/leaderboard"
            android:textSize="18sp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="settingsSelected"
            android:text="@string/settings"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rulesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>