<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/accuracyDisplay"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corner"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/finalScoreDisplayContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/correctImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/correct"
            android:src="@drawable/correct"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/numberCorrectDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberCorrectDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_34"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/incorrectImage"
            app:layout_constraintStart_toEndOf="@+id/correctImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/incorrectImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/incorrect"
            android:src="@drawable/incorrect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/numberIncorrectDisplay"
            app:layout_constraintStart_toEndOf="@+id/numberCorrectDisplay"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberIncorrectDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_125"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/incorrectImage"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/finalScoreDisplayContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:background="@drawable/rounded_corner"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracyDisplay">

        <TextView
            android:id="@+id/ScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="42sp"
            app:layout_constraintBottom_toTopOf="@+id/finalScoreDisplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/finalScoreDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/_10_526"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ScoreTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/podiumImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/podium"
        android:src="@drawable/podium"
        app:layout_constraintBottom_toTopOf="@+id/viewLeaderboardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finalScoreDisplayContainer" />

    <Button
        android:id="@+id/viewLeaderboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:text="@string/view_leaderboard"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podiumImage"
        android:onClick="toLeaderboard"/>
</androidx.constraintlayout.widget.ConstraintLayout>